Fix cookies div behind chat bot

--- a/symfony/assets/styles/partials/_commons.scss
+++ b/symfony/assets/styles/partials/_commons.scss
@@ -100,7 +100,3 @@ ul.dropdown-menu {
 .dropdown-item:active {
   background-color: white !important;
 }
-
-#tidio-chat {
-  z-index: 5;
-}
